Se agregó HATEOAS a Book. Queda pendiente agregarlo a Author